syntax = "proto3";
package da.v1;

option go_package = "github.com/Wondertan/da/modules/da/v1";

service Msg {
    rpc AttestDataRoot(MsgAttestDataCommitment) returns(MsgAttestDataCommitmentResponse);
}

message MsgAttestDataCommitment {
    repeated bytes data_commitments = 1;
    repeated int64 heights = 2;
    repeated Attestation attestations = 3;
}

message Attestation {
    string validator_address = 1;
    repeated int64 heights = 2;
    bytes signature = 3;
}

message MsgAttestDataCommitmentResponse {}