syntax = "proto3";
package da.v1;

option go_package = "github.com/Wondertan/da/modules/da/v1";

message Attestation {
    string validator_address = 1;
    // the number of data commitments the attestation signs over
    uint32 size = 3;
    bytes signature = 4;
}

message VoteExtensionData {
    repeated DataTuple data_tuples = 1;
}

message DataTuple {
    uint64 height = 1;
    bytes data_root = 2;
}